Version ClaSS-1.0.47 release (2013/05/28)
-------------------------------------------

Fix to the year end script for assigning teaching classes.

Adopted HTMLPurifier for cleaning HTML comments prior to storing in
the db.

Added a sort by option to the class_edit page.


Version ClaSS-1.0.46 release (2013/05/10)
-------------------------------------------

Changed the color coding for register late codes.

Attendance statistics counts new signed out code US seprately.

Added yeargroup responsibles to the list of bccs, same as for tutors,
for messaging.

Compatibility fix to the register setAll js function for Chrome and
Firefox 20.

New Register page to list signed out student with time.

Fix to identifying the attendance session for new events.

New list only button for printing the buses.

A fix to the gs_sortable javascript for Spanish accented characters.

Tiny fix to the contact details form to turn off autofill and prevent
errors from Chrome.

The transport print lists now filter out any students who are not on
the current roll.



Version ClaSS-1.0.45 release (2013/04/14)
-------------------------------------------

The previous school field added to the entrybook new_student form.

The teacher names added to group_list printing in Admin.

New script to export a remittance's fees grouped by concept.

Fix to list_student_teachers.

Added a shortcut button to edit the medical page in InfoBook.

New signed out attendance code.

Moved the stop departuretime calculation to the list_bus_stops
function.

New transport function to count the number of bookings per journey.



Version ClaSS-1.0.44 release (2013/04/02)
-------------------------------------------

Rounded button corners with CSS3.

Moved the documentdrop init function into the host.

The file table now has owner type 'c' for community.

The list_section function can optionally include "Whole School".

The staff_list page has document a drop area for each section.

Renamed and fixed get_residence_perm.
